Adding service methods for jobs